add flux 0.14 compat

--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,6 +1,6 @@
 @misc{ziyiyin2023,
 	title = {slimgroup/JutulDarcyRules.jl: v0.2.6},
-	author = {{Ziyi Yin} and Grant Bruer and Mathias Louboutin},
+	author = {Ziyi Yin and Grant Bruer and Mathias Louboutin},
 	year = {2023},
 	month = {07},
 	date = {2023-07-21},
