add latest tle doi

--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,12 +1,14 @@
-@misc{ziyiyin2023,
-	title = {slimgroup/JutulDarcyRules.jl: v0.2.6},
-	author = {Ziyi Yin and Grant Bruer and Mathias Louboutin},
-	year = {2023},
-	month = {07},
-	date = {2023-07-21},
-	publisher = {Zenodo},
-	doi = {10.5281/ZENODO.8172164},
-	url = {https://zenodo.org/record/8172164}
+@software{JutulDarcyRules,
+  author       = {Ziyi Yin and
+                  Grant Bruer and
+                  Mathias Louboutin},
+  title        = {slimgroup/JutulDarcyRules.jl: v0.2.8},
+  month        = {05},
+  year         = {2024},
+  publisher    = {Zenodo},
+  version      = {v0.2.8},
+  doi          = {10.5281/zenodo.11228539},
+  url          = {https://doi.org/10.5281/zenodo.11228539}
 }
 
 @article{louboutin2023,
